2009-07-12  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: fail gracefully for non-studly-case typename lookups.
	[Fixes #515453]

2009-07-12  Mike Kestner  <mkestner@novell.com>

	* sample/Makefile.am: fix for cairo conflicts related to the switch to gmcs.
	* sample/GtkDemo/Makefile.am: fix for cairo conflicts related to the switch to gmcs.

2009-07-12  Mike Kestner  <mkestner@novell.com>

	* generator/ObjectBase.cs: add CallByName overload with ownership.
	* generator/Parameters.cs: support owned by callee parameters.
	Adapted from a patch by Maarten Bosmans. [Fixes #513680]

2009-07-10  Christian Hoff  <christian_hoff@gmx.net>

	* pango/Pango.metadata: Mark "ink_rect" and "logical_rect" parameters of Get*Extends
	methods as "out".  [Fixes #510105]

2009-07-02  Christian Hoff  <christian_hoff@gmx.net>

	* configure.in.in: Target .net 2.0 profile
	* gapi-cdecl-insert: Kill. We are now using the UnmanagedFunctionPointerAttribute
	for callbacks.
	* glib/CdeclCallback.cs: Mark obsolete.
	* generator/*.cs:
	* *.custom: Use [UnmanagedFunctionPointer (CallingConvention.Cdecl)] instead of
	[GLib.CDeclCallback].

2009-06-15  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Widget.custom: Don't use [MarshalAs] for struct fields since
	that is not supported in the .net framework

2009-06-08  Christian Hoff  <christian_hoff@gmx.net>

	* generator/Signal.cs: Fix indexing of the signal arguments array for
	"out" and "ref" parameters.  [Fixes #508572]

2009-05-28  Aaron Bockover  <abockover@novell.com>

	* generator/EnumGen.cs: Fix enum generator to properly parse integer
	values with type modifier suffixes (UL, L, U), and not accidentally
	munge named values that happen to end in one of these suffixes

2009-05-18  Stephane Delcroix  <sdelcroix@novell.com>

	* configure.in.in:
	* bootstrap-generic:
	* bootstrap-2.14: check for mono >= 2.2. not that it requires it to
	build, but the generated bindings need it to run.
