@@ -1,5 +1,10 @@
 2009-07-12  Mike Kestner  <mkestner@novell.com>
 
+	* generator/Parameters.cs: another owned parameter patch from Sebastian.
+	[Fixes #498498]
+
+2009-07-12  Mike Kestner  <mkestner@novell.com>
+
 	* glib/GType.cs: fail gracefully for non-studly-case typename lookups.
 	[Fixes #515453]
 
